--- a/ospfv3.yml
+++ b/ospfv3.yml
@@ -12,21 +12,24 @@ topology:
       image: docker.io/arthurk99/cisco-iol:17.15.01
       #ports:
       #  -5000:5000
-      startup-config: config/config-r1.partial
+      #startup-config: config/config-r1.partial
+      image: ghcr.io/hellt/wireshark:latest
     
     router2:
       kind: cisco_iol
       image: docker.io/arthurk99/cisco-iol:17.15.01
       #ports:
       #  -5000:5000
-      startup-config: config/config-r2.partial
+      #startup-config: config/config-r2.partial
+      image: ghcr.io/hellt/wireshark:latest
       
     router3:
       kind: cisco_iol
       image: docker.io/arthurk99/cisco-iol:17.15.01
       #ports:
       #  -5000:5000
-      startup-config: config/config-r3.partial
+      #startup-config: config/config-r3.partial
+      image: ghcr.io/hellt/wireshark:latest
 
     PC1:
       kind: linux # "Alpine Linux v3.12"
